resource/theme/default/css/default.css
/* ... */
@media only screen and (max-width: 420px) {
	.popupImg{
		width: calc(100% - 66px);
		margin-left: 0px;
	}

	.smallPopup .mainBox{
		width: 100%;
		margin-top: 0px;
		margin-left: 0px;
	}
}

/* popup end*/

/* header nav start*/

.headerNav {
	margin-left: 7%;
	width: 86%;
	color: #ffffff;
	font-size: 22px;
	height: 50px;
	line-height: 50px;
	position: fixed;
	z-index: 500;
}

.bigLogo {
	margin: 0px 20px 0px 20px;
}

.loginBtn, .signupBtn {
	cursor: pointer;
	float: right;
}
.loginBtn, .signupBtn {
	padding-left: 15px;
	padding-right: 15px;
}

.loginBtn:hover {
	color: rgb(0, 171, 230);
}

.signupBtn:hover{
	color: rgb(255, 51, 153);
}

@media only screen and (max-width: 400px) {
	.headerNav span {
		margin: 0px 10px 0px 10px;
	}

}

@media only screen and (max-width: 1024px) {
	.headerNav {
		width: 100%;
		margin-left: 0px;
	}

}

.headerNavBackground {
	opacity: 0.9;
	background-color: #222;
	width: 100%;
	height: 50px;
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: 499;
}

/* header nav end*/

/* poster start*/

.poster {
	/*background-image: url("../img/header.jpg");*/
	background-image: url("../img/8206-8.jpg");
	background-repeat: no-repeat;
	height: 620px;
	width: 100%;
}

/* poster end*/



/* text container section start*/
.fake_textSection {
	opacity: 0;
	position: absolute;
	text-align: center;
	height: 50px;
	width: 84%;
	margin-left: 7%;
	top: 0px;
}

.textSection {
	position: absolute;
	text-align: center;
	height: auto;
	width: 84%;
	margin-left: 7%;
	top: 640px;
	padding-bottom: 70px;
}

.textSection .large {
	width: calc(100% - 40px);
	margin: 0px 20px 0px 20px;
	font-size: 33px;
	line-height: 50px;
}

.textSection .small {
	line-height: 26px;
	font-size: 18px;
	width: 600px;
	position: relative;
	left: 50%;
	margin-left: -300px;
}

@media only screen and (max-width: 600px) {
	.textSection .small {
		width: calc(100% - 40px);
		left: 0px;
		margin: 0px 20px 0px 20px;
	}

}

@media only screen and (max-width: 1024px) {
	.textSection {
		width: 100%;
		margin-left: 0px;
	}

}

/* text container section end*/

/* img nav container section start*/
.imgNavContainer {
	width: 100%;
	height: 50px;
	margin: 0px;
	padding: 0px;
	/*top is determined by every page*/
	position: absolute;

}

.imgNavContainerBackground {
	opacity: 0.9;
	background-color: #fdfdfd;
	z-index: 497;
}

.imgNavContainerForeground {

	height: 49px;
	border-top: solid 1px #efefef;
	box-shadow: 0px 1px 2px #ededed;
	z-index: 498;
}

.linkContainer {
	position: relative;
	/*background-color: red;*/
}

.imgNavContainer li {
	/*background-color: #54ab99;*/
	color: #666666;
	display: inline-block;
	font-size: 16px;
	line-height: 46px;
	height: 50px;
	border: 0px;
	padding-left: 30px;
	padding-right: 30px;
	max-width: 320px;
	overflow: hidden;
	cursor: pointer;
}



.imgNavContainerForeground .active {
	height: 46px;
	color: rgb(0, 171, 230);
	border-bottom: solid 4px;
}

/* img nav container section end*/

/* image grid container section start*/
.bodySection {
	/*test height*/
	/*height: 1500px;*/
	width: 100%;
	overflow: hidden;
	position: absolute;
	background-color: #f9f9f9;
}

/* image grid container section end*/

/* image group section start*/

.imgGroup {
	width: 96%;
	margin-left: 2%;
	position: relative;
}

.pagingBanner{
	width: calc(96% - 10px);
	margin-left: 2%;
	padding:5px;
	margin-top: 20px;
	position: relative;
}

@media only screen and (max-width: 1024px) {
	.pagingBanner{
		width: calc(100% - 4px);
		margin-left: 2px;
	}
}

.pagingBanner a {
	font-size: 14px;
	background-color: #ffffff;
	border:1px solid #dddddd;
	padding: 10px 15px 10px 15px;
	color: #666666;
	line-height: 23px;
	margin-left:-1px;
}

.pagingBanner .start{
	-moz-border-radius: 0px;
	-webkit-border-radius: 3px 0px 0px 3px;
	border-radius: 3px 0px 0px 3px; 
}

.pagingBanner .end{
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px 3px 3px 0px;
	border-radius: 0px 3px 3px 0px;
}

.pagingBanner .active{
	padding: 10px 15px 10px 15px;
	color: rgb(0, 171, 230);
	font-size: 14px;
}

.pagingBanner a:hover {
	border:1px solid #dddddd;
	color: rgb(0, 171, 230);
	background-color: #eeeeee;
}

.footer{
	width: 100%;
	margin-top:45px;
	background-color: #FFFFFF;
	min-height: 220px;
	border-top: 1px solid #ededed;
}

.imgThumbBox {
	/*display:none; */
	cursor:pointer;
	position: absolute; 
	box-shadow: 1px 1px 5px #999999;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	background-position: center;

	transition: 200ms -webkit-filter linear;
	-webkit-transition : -webkit-filter 200ms linear;

}

.imgThumbBox:hover {
	-webkit-filter: contrast(110%);
	filter: contrast(110%);
	-webkit-filter: brightness(1.20);
	filter: brightness(1.20);
	transition: 200ms -webkit-filter linear;
	-webkit-transition : -webkit-filter 200ms linear

}

@media only screen and (max-width: 1024px) {
	.imgGroup {
		width: calc(100% - 6px);
		margin-left: 3px;
		position: relative;
	}

	.footer{
		margin-top:25px;
	}
}



/* image group section end*/




/*pop up box*/

.hideImgId {
	width:0px;
	height:0px;
	overflow: hidden;
}

#popImgBox {
	height:500px;
}

.displayBg {
	background: rgb(34,34,34);
	background-repeat: no-repeat;
	background-size: 100% 100%;
	background-position: 0px 0px;
}

.loadingBg {

	background: rgb(34,34,34) url("../img/loader2.gif") no-repeat center center;
	background-size: 30px 30px;
}

.loadingBgLight {

	background: #333333 url("../img/loader2.gif") no-repeat center center;
	background-size: 30px 30px;
}

.popupImg .innerBox{
	padding:0px;
	position: relative;
	width:100%;
	/*background-color: red;*/
	height:auto;
}

.popupImg .innerBox input[type="text"].imgTagName{
	/*rgb(0, 171, 230)*/
	width: 200px;
	font-size:14px;
	display: inline-block;
	border:1px solid #999999;
	padding: 0px 12px 0px 12px;
	margin: 0px 5px 10px 5px;
	height: 23px;
	line-height: 23px;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
}
/* ... */

